--- a/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
@@ -66,7 +66,7 @@
             name="azure-storage-5.0.0.jar"
             mvn_uri="mvn:org.talend.libraries/azure-storage-5.0.0/6.0.0">
         </libraryNeeded>
-        
+
         <libraryNeeded
             context="plugin:org.talend.libraries.jackson"
             id="jackson-core-2.8.4.jar"
@@ -74,24 +74,24 @@
             mvn_uri="mvn:org.talend.libraries/jackson-core-2.8.4/6.0.0"
             uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-core-2.8.4.jar">
         </libraryNeeded>
-        <libraryNeeded 
-        	context="plugin:org.talend.hadoop.distribution.hdinsight360" 
-        	id="commons-collections-3.2.2.jar" 
-        	name="commons-collections-3.2.2.jar" 
+        <libraryNeeded
+        	context="plugin:org.talend.hadoop.distribution.hdinsight360"
+        	id="commons-collections-3.2.2.jar"
+        	name="commons-collections-3.2.2.jar"
         	mvn_uri="mvn:org.talend.libraries/commons-collections-3.2.2/6.0.0"/>
-        <libraryNeeded 
-        	context="plugin:org.talend.hadoop.distribution.hdinsight360" 
-        	id="guava-14.0.1.jar" 
-        	name="guava-14.0.1.jar" 
+        <libraryNeeded
+        	context="plugin:org.talend.hadoop.distribution.hdinsight360"
+        	id="guava-14.0.1.jar"
+        	name="guava-14.0.1.jar"
         	mvn_uri="mvn:org.talend.libraries/guava-14.0.1/6.0.0">
         </libraryNeeded>
-        <libraryNeeded 
-        	context="plugin:org.talend.hadoop.distribution.hdinsight360" 
-        	id="jackson-core-asl-1.9.13" 
-        	name="jackson-core-asl-1.9.13.jar" 
+        <libraryNeeded
+        	context="plugin:org.talend.hadoop.distribution.hdinsight360"
+        	id="jackson-core-asl-1.9.13"
+        	name="jackson-core-asl-1.9.13.jar"
         	mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.13/6.0.0"/>
-        
-        <!-- Hive libraries -->  
+
+        <!-- Hive libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdinsight340"
             id="parquet-hive-bundle-1.6.0.jar"
@@ -116,8 +116,8 @@
             name="hive-exec-1.2.1000.2.4.1.0-327.jar"
             mvn_uri="mvn:org.talend.libraries/hive-exec-1.2.1000.2.4.1.0-327/6.0.0">
         </libraryNeeded>
-               
-        <!-- Pig libraries -->    
+
+        <!-- Pig libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
             id="parquet-pig-bundle-1.6.0.jar"
@@ -160,7 +160,7 @@
             name="elephant-bird-rcfile-4.1.jar"
             mvn_uri="mvn:org.talend.libraries/elephant-bird-rcfile-4.1/6.0.0">
         </libraryNeeded>
-        
+
         <!-- Spark 2 libraries-->
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="avro-1.7.7" name="avro-1.7.7.jar" mvn_uri="mvn:org.talend.libraries/avro-1.7.7/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="commons-codec-1.10" name="commons-codec-1.10.jar" mvn_uri="mvn:org.talend.libraries/commons-codec-1.10/6.0.0"/>
@@ -189,7 +189,7 @@
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="spark-network-common_2.11-2.1.0.2.6.0.2-76" name="spark-network-common_2.11-2.1.0.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/spark-network-common_2.11-2.1.0.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="spark-sql_2.11-2.1.0.2.6.0.2-76" name="spark-sql_2.11-2.1.0.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/spark-sql_2.11-2.1.0.2.6.0.2-76/6.0.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdinsight360" id="spark-streaming_2.11-2.1.0.2.6.0.2-76" name="spark-streaming_2.11-2.1.0.2.6.0.2-76.jar" mvn_uri="mvn:org.talend.libraries/spark-streaming_2.11-2.1.0.2.6.0.2-76/6.0.0"/>
-        
+
         <!-- Big Data launcher libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdinsight360"
@@ -229,18 +229,21 @@
              <library id="commons-lang-2.6" />
              <library id="spark-mllib_2.11-2.1.0.2.6.0.2-76" />
              <library id="spark-mllib-local_2.11-2.1.0.2.6.0.2-76" />
+             <library id="scala-reflect-2.11.8" />
+             <library id="spark-catalyst_2.11-2.1.0.2.6.0.2-76" />
+             <library id="spark-sql_2.11-2.1.0.2.6.0.2-76" />
         </libraryNeededGroup>
-        
+
         <!-- Spark SQL group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark libraries for HDInsight 3.6.0 that are MRRequired for Parquet"
                 id="SPARK-SQL-LIB-MRREQUIRED-HD_INSIGHT_3_6_0"
                 name="SPARK-SQL-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
              <library id="scala-reflect-2.11.8" />
-             <library id="spark-catalyst_2.11-2.1.0.2.6.0.2-76" />             
+             <library id="spark-catalyst_2.11-2.1.0.2.6.0.2-76" />
              <library id="spark-sql_2.11-2.1.0.2.6.0.2-76" />
         </libraryNeededGroup>
-        
+
         <!-- Spark Parquet group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark libraries for HDInsight 3.6.0 that are MRRequired for Parquet"
@@ -248,7 +251,7 @@
                 name="SPARK-PARQUET-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
              <library id="commons-logging-1.1.3" />
         </libraryNeededGroup>
-        
+
         <!-- Spark Hive group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark Hive libraries for HDInsight 3.6.0 that are MRREQUIRED"
@@ -256,7 +259,7 @@
                 name="SPARK-HIVE-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
             <library id="spark-hive_2.11-2.1.0.2.6.0.2-76"/>
         </libraryNeededGroup>
-        
+
         <!-- Spark Streaming group -->
         <libraryNeededGroup
                 description="Spark Streaming libraries for HDInsight 3.6.0"
@@ -264,9 +267,9 @@
                 name="SPARK-STREAMING-LIB-HD_INSIGHT_3_6_0">
              <library id="spark-streaming_2.11-2.1.0.2.6.0.2-76" />
              <library id="jodd-core-3.5.2" />
-             
+
         </libraryNeededGroup>
-        
+
         <!-- Spark Streaming Parquet group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark libraries for HDInsight 3.6.0 that are MRRequired for Parquet"
@@ -277,15 +280,15 @@
              <library id="parquet-hadoop-1.8.1" />
              <library id="parquet-hadoop-bundle-1.6.0" />
         </libraryNeededGroup>
-        
+
         <!-- GraphFrames group MRREQUIRED -->
         <libraryNeededGroup
-            description="GraphFrames libraries for HDInsight 3.4.0 that are MRREQUIRED" 
+            description="GraphFrames libraries for HDInsight 3.4.0 that are MRREQUIRED"
             id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HD_INSIGHT_3_6_0"
             name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HD_INSIGHT_3_6_0">
             <library id="spark-graphx_2.11-2.1.0.2.6.0.2-76.jar" />
         </libraryNeededGroup>
-        
+
         <!-- Hive parquet group -->
         <libraryNeededGroup
                 description="Hive Parquet libraries for HDInsight 3.6.0"
@@ -293,7 +296,7 @@
                 name="HIVE-PARQUET-LIB-HD_INSIGHT_3_6_0">
             <library id="parquet-hive-bundle-1.6.0.jar"/>
         </libraryNeededGroup>
-        
+
         <!-- Map/Reduce group -->
         <libraryNeededGroup
                 description="Map/Reduce libraries for HDInsight 3.6.0"
@@ -309,8 +312,8 @@
              <library id="commons-collections-3.2.2.jar" />
              <library id="guava-14.0.1.jar" />
         </libraryNeededGroup>
-        
-        <!-- Map/Reduce parquet group --> 
+
+        <!-- Map/Reduce parquet group -->
         <libraryNeededGroup
                 description="Map/Reduce parquet libraries for HDInsight 3.6.0"
                 id="MAPREDUCE-PARQUET-LIB-HD_INSIGHT_3_6_0"
@@ -319,7 +322,7 @@
              <library id="parquet-hadoop-1.8.1" />
              <library id="jodd-core-3.5.2" />
         </libraryNeededGroup>
-        
+
         <!-- Pig common group -->
         <libraryNeededGroup
                 description="Pig Parquet libraries for HDInsight 3.6.0"
@@ -331,7 +334,7 @@
             <library id="parquet-pig-bundle-1.6.0.jar"/>
             <library id="datafu-1.2.0.jar"/>
         </libraryNeededGroup>
-        
+
         <!-- Pig parquet group -->
         <libraryNeededGroup
                 description="Pig Parquet libraries for HDInsight 3.6.0"
@@ -339,7 +342,7 @@
                 name="PIG-PARQUET-LIB-HD_INSIGHT_3_6_0">
             <library id="parquet-pig-bundle-1.6.0.jar"/>
         </libraryNeededGroup>
-        
+
         <!-- Pig parquet SequenceFile group -->
         <libraryNeededGroup
                 description="Pig Parquet libraries for HDInsight 3.6.0"
@@ -347,7 +350,7 @@
                 name="PIG-SEQUENCEFILE-LIB-HD_INSIGHT_3_6_0">
             <library id="elephant-bird-hadoop-compat-4.9.jar"/>
         </libraryNeededGroup>
-        
+
         <!-- Pig parquet RCFilePigStorage group -->
         <libraryNeededGroup
                 description="Pig Parquet libraries for HDInsight 3.6.0"
@@ -359,7 +362,7 @@
             <library id="hive-common-1.2.1000.2.4.1.0-327.jar"/>
             <library id="hive-exec-1.2.1000.2.4.1.0-327.jar"/>
         </libraryNeededGroup>
-        
+
         <!-- group of HD Insight 3.6.0 common libraries -->
         <libraryNeededGroup
                 description="HD Insight common libraries"
@@ -378,6 +381,6 @@
         	<library id="jackson-core-asl-1.9.13" />
         	<library id="commons-logging-1.1.3" />
         </libraryNeededGroup>
-        
+
     </extension>
 </plugin>
