--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,8 @@
         <module>main/plugins/org.talend.hadoop.distribution.mapr510.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr520</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr520.jars</module>
+        <module>main/plugins/org.talend.hadoop.distribution.mapr600</module>
+        <module>main/plugins/org.talend.hadoop.distribution.mapr600.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.piv101</module>
         <module>main/plugins/org.talend.hadoop.distribution.piv200</module>
         <module>main/plugins/org.talend.demo.bigdata.ce</module>
