--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.mapr500.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr510.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr520.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.mapr600.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.piv101.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.piv200.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.test.base</module>
