--- a/main/plugins/org.talend.hadoop.distribution.mapr600.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr600.jars/pom.xml
@@ -13,7 +13,7 @@
     <talend.groupid>org.talend.libraries</talend.groupid>
     <talend.version.600>6.0.0</talend.version.600>
   </properties>
-  <build>
+  <!--build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -30,7 +30,7 @@
               <stripVersion>true</stripVersion>
               <outputDirectory>${project.basedir}/lib</outputDirectory>
               <artifactItems>
-                <!--artifactItem>
+                <artifactItem>
                   <groupId>${talend.groupid}</groupId>
                   <artifactId>datanucleus-api-jdo-4.2.1</artifactId>
                   <version>${talend.version.620}</version>
@@ -279,14 +279,14 @@
                   <groupId>${talend.groupid}</groupId>
                   <artifactId>antlr4-runtime-4.5</artifactId>
                   <version>${talend.version.630}</version>
-                </artifactItem-->
+                </artifactItem>
               </artifactItems>
             </configuration>
           </execution>
         </executions>
       </plugin>
     </plugins>
-  </build>
+  </build-->
   <repositories>
     <repository>
       <id>talend_nexus</id>
