--- a/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
@@ -81,7 +81,7 @@
              <library id="jersey-core-1.9.jar" />
              <library id="htrace-core4-4.0.1-incubating.jar" />
              <library id="servlet-api-2.5.jar"/>
-             <library id="jackson-mapper-asl-1.9.13.jar" />
+             <library id="jackson-mapper-asl-1.9.14-TALEND.jar" />
              <library id="jackson-core-asl-1.9.14-TALEND.jar" />
         </libraryNeededGroup>
         
@@ -173,7 +173,7 @@
             <library id="jackson-core-asl-1.9.14-TALEND.jar"/>
             <library id="jackson-databind-2.6.7.1.jar"/>
             <library id="jackson-jaxrs-1.9.13.jar"/>
-            <library id="jackson-mapper-asl-1.9.13.jar"/>
+            <library id="jackson-mapper-asl-1.9.14-TALEND.jar"/>
             <library id="jackson-module-paranamer-2.6.7.jar"/>
             <library id="jackson-module-scala_2.11-2.6.7.1.jar"/>
             <library id="jackson-xc-1.9.13.jar"/>
@@ -311,7 +311,7 @@
              <library id="commons-codec-1.9.jar" />
              <library id="commons-httpclient-3.0.1.jar"/>
              <library id="htrace-core-3.2.0-incubating.jar" />
-             <library id="jackson-mapper-asl-1.9.13.jar" />
+             <library id="jackson-mapper-asl-1.9.14-TALEND.jar" />
              <library id="jackson-core-asl-1.9.14-TALEND.jar" />
              <library id="jackson-jaxrs-1.9.13.jar"/>
              <library id="jackson-xc-1.9.13.jar"/>
