--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -315,23 +315,23 @@
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
-            id="jackson-databind-2.5.4.redhat-2.jar"
-            name="jackson-databind-2.5.4.redhat-2.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.5.4.redhat-2/6.0.0">
+            id="jackson-databind-2.2.3.jar"
+            name="jackson-databind-2.2.3.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.2.3/6.1.0">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
-            id="jackson-core-2.5.4.jar"
-            name="jackson-core-2.5.4.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-2.5.4/6.0.0">
+            id="jackson-core-2.2.3.jar"
+            name="jackson-core-2.2.3.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-core-2.2.3/6.1.0">
         </libraryNeeded>
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
-            id="jackson-annotations-2.5.4.jar"
-            name="jackson-annotations-2.5.4.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.5.4/6.0.0">
+            id="jackson-annotations-2.2.3.jar"
+            name="jackson-annotations-2.2.3.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.2.3/6.1.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -800,9 +800,9 @@
              <library id="spark-assembly-cdh5.5.2" />
              <library id="jersey-server-1.14.jar" />
              <library id="jersey-servlet-1.14.jar" />
-             <library id="jackson-databind-2.5.4.redhat-2.jar" />
-             <library id="jackson-core-2.5.4.jar" />
-             <library id="jackson-annotations-2.5.4.jar" />
+             <library id="jackson-databind-2.3.1.jar" />
+             <library id="jackson-core-2.3.1.jar" />
+             <library id="jackson-annotations-2.3.0.jar" />
              <library id="snappy-java-1.0.4.1.jar"/>
              <library id="parquet-hadoop-bundle-cdh5.5.2"/>
         </libraryNeededGroup>
@@ -933,11 +933,11 @@
              <library id="navigator-sdk-model-2.0-20160624" />
              <library id="spring-core-4.0.7.RELEASE"/>
              <library id="spring-web-4.0.7.RELEASE"/>
-             <library id="jackson-databind-2.5.4.redhat-2.jar"/>
-             <library id="jackson-annotations-2.5.4.jar"/>
-             <library id="jackson-core-2.5.4.jar"/>
+             <library id="jackson-databind-2.2.3.jar"/>
+             <library id="jackson-annotations-2.2.3.jar"/>
+             <library id="jackson-core-2.2.3.jar"/>
              <library id="commons-net-3.1"/>
-             <library id="jackson-datatype-joda-2.5.4"/>
+             <library id="jackson-datatype-joda-2.1.0"/>
              <library id="joda-time-2.5.jar"/>
              <library id="httpclient-4.2.5.jar"/>
         </libraryNeededGroup>
@@ -950,8 +950,8 @@
             <library id="kite-data-core-1.0.0-cdh5.5.0.jar"/>
             <library id="kite-data-mapreduce-1.0.0-cdh5.5.0.jar"/>
             <library id="kite-hadoop-compatibility-1.0.0-cdh5.5.0.jar"/>
-            <library id="jackson-databind-2.5.4.redhat-2.jar"/>
-            <library id="jackson-core-2.5.4.jar"/>
+            <library id="jackson-databind-2.2.3.jar"/>
+            <library id="jackson-core-2.2.3.jar"/>
             <library id="parquet-avro-cdh5.5.2"/>
         </libraryNeededGroup>
         
